public class Main {
    public static void main(String[]args){
        KreinerFlix KF = new KreinerFlix();
        KF.loginOrRegister();
        KF.loadMovies();
    }
}
