import java.util.ArrayList;

public class Movie extends Media {
    public Movie(String mediaName, int releaseYear, ArrayList<String> genre, float IMDBScore) {
        super(mediaName, releaseYear, genre, IMDBScore);
    }
}

